Bug 347507, ignore negative rowspan and columnspan in MathML.  r=rbs, sr=roc.